<resources>
    <string name="app_name">Chattery</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_login_method">Choose login method</string>
    <string name="discord">Discord</string>
    <string name="vk">VK</string>
    <string name="telegram">Telegram</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="join_game">Join an existing Game</string>
    <string name="get_discord_token_error">Some Error happened. Try again</string>
    <string name="incorrect_qr_code">QR code is incorrect!</string>
    <string name="session_not_exists">Session does not exist!</string>
    <string name="leave_game">Do you really want to leave the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_settings">Game settings</string>
    <string name="players_amount">"Amount of Players : "</string>
    <string name="game_cost">"Game Cost : "</string>
    <string name="host_game">Host the Game</string>
    <string name="lets_go">Lets GO!</string>
    <string name="host_game_error">An error occurred while creating the game</string>
    <string name="session_info_error">An error occurred while retrieving game information</string>
    <string name="players_joined">Players joined :</string>
    <string name="session_qr_code">QR code to enter the game</string>
    <string name="cant_join_session">You Cant join the session</string>
    <string name="nickname_unavailable">This nickname is Unavailable!</string>
    <string name="invalid_discord_access_token">Your Discord Access Token is Invalid</string>
    <string name="input_telegram_number">Enter your phone number</string>
    <string name="input_telegram_code">Enter your Telegram Code</string>
    <string name="telegram_number_error">Something went wrong! Check your number or password</string>
    <string name="enter_password">Password (If exists)</string>
    <string name="telegram_token_not_working">Your Telegram token is not working! Rewrite it in settings</string>
    <string name="vk_token_not_working">Your VK token is not working! Rewrite it in settings</string>
    <string name="get_token">Get Token</string>
    <string name="make_choice">Make a choice</string>
    <string name="player_selected">Player has been Selected!</string>
    <string name="you_won">You won!</string>
    <string name="you_lose">You lose(</string>
    <string name="correct_answer">The correct answer is :</string>
    <string name="he_won">Won this game!</string>
    <string name="restart_game">Restart Game?</string>
    <string name="not_enough_dialogs_tg">Not enough dialogs in Telegram</string>
    <string name="save">Save</string>
    <string name="blacklist_dialog">What dialogues should be shown in the game?</string>
    <string name="login_telegram">Login with Telegram</string>
    <string name="disable_acc">Disable Account</string>
    <integer name="com_vk_sdk_AppId">7850444</integer>
    <string name="personal_data">All personal data is stored only on your phone</string>
    <string name="guess_dialog">Guess, whose Dialog?</string>
    <string name="you_sure">Are you Sure?</string>
</resources>
