<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/game_cost"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/game_cost"
        android:textColor="@color/textBlack"
        android:autoSizeTextType="uniform">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/players_amount"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/players_amount"
        android:textColor="@color/textBlack"
        android:autoSizeTextType="uniform"
        android:layout_marginBottom="15dp">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/discord_btn"
        android:layout_margin="15dp"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_btn_style"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="10dp"
        android:text="@string/lets_go"
        android:textSize="20sp">
    </Button>
</LinearLayout>