<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:background="@drawable/rounded_layout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/winner_name_text"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/textBlack"
        android:autoSizeTextType="uniform"
        android:breakStrategy="simple"
        android:gravity="center"
        android:layout_marginBottom="15dp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/textBlack"
        android:text="@string/he_won"
        android:autoSizeTextType="uniform"
        android:breakStrategy="simple"
        android:gravity="center"
        android:layout_marginBottom="45dp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/textBlack"
        android:text="@string/restart_game"
        android:autoSizeTextType="uniform"
        android:breakStrategy="simple"
        android:gravity="center"
        android:layout_marginBottom="15dp">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/vote_for_restart_button"
        android:layout_margin="15dp"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_btn_style"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="10dp"
        android:text="@string/lets_go"
        android:textSize="20sp">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/leave_button"
        android:layout_margin="15dp"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_btn_style"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="10dp"
        android:text="@string/no"
        android:textSize="20sp">
    </Button>
</LinearLayout>