<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="15dp"
    android:background="@drawable/rounded_layout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/leave_game"
        android:textColor="@color/textBlack"
        android:autoSizeTextType="uniform"
        android:breakStrategy="simple"
        android:gravity="center"
        android:layout_marginBottom="15dp">
    </TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:textColor="#FFFF"
            android:background="@drawable/rounded_btn_style"
            android:fontFamily="@font/comfortaa_bold"
            android:autoSizeTextType="uniform"
            android:text="@string/yes">
        </Button>
        <Button
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/textBlack"
            android:textColor="#FFFF"
            android:background="@drawable/rounded_btn_style"
            android:fontFamily="@font/comfortaa_bold"
            android:autoSizeTextType="uniform"
            android:text="@string/no">
        </Button>
    </RelativeLayout>
</LinearLayout>