<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:background="@drawable/rounded_layout">
    <EditText
        android:id="@+id/enter_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:digits="0123456789+"
        android:maxLength="15"
        android:background="@drawable/rounded_btn_style"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        android:layout_margin="15dp"
        android:hint="@string/input_telegram_number"
        android:autoSizeTextType="uniform"
        android:padding="10dp"
        android:fontFamily="@font/comfortaa_bold">
    </EditText>
    <EditText
        android:id="@+id/enter_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn_style"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        android:layout_margin="15dp"
        android:hint="@string/enter_password"
        android:autoSizeTextType="uniform"
        android:padding="10dp"
        android:fontFamily="@font/comfortaa_bold">
    </EditText>
    <Button
        android:id="@+id/send_telegram_number_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_btn_style"
        android:drawableStart="@drawable/ic_telegram_logo"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="10dp"
        android:text="@string/get_token"
        android:textSize="20sp">
    </Button>
</LinearLayout>