<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:background="@drawable/rounded_layout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/game_settings"
        android:textColor="@color/textBlack"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:layout_marginBottom="15dp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/game_cost"
            android:textColor="@color/textBlack"
            android:autoSizeTextType="uniform"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/cost_counter"
            android:fontFamily="@font/comfortaa_bold"
            android:text="100"
            android:textColor="@color/textBlack"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
        </TextView>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/seek_bar_cost"
            android:min="100"
            android:max="1000"
            android:layout_gravity="center_horizontal">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/players_amount"
            android:textColor="@color/textBlack"
            android:autoSizeTextType="uniform"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/players_counter"
            android:fontFamily="@font/comfortaa_bold"
            android:text="3"
            android:textColor="@color/textBlack"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
        </TextView>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/seek_bar_players"
            android:min="3"
            android:max="6"
            android:layout_gravity="center_horizontal">
        </SeekBar>
    </LinearLayout>
    <Button
        android:id="@+id/host_game_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/textBlack"
        android:textColor="#FFFF"
        android:background="@drawable/rounded_btn_style"
        android:drawableStart="@drawable/ic_discord_logo"
        android:fontFamily="@font/comfortaa_bold"
        android:padding="10dp"
        android:text="@string/host_game"
        android:textSize="20sp">
    </Button>
</LinearLayout>